Add profile for errorprone, completely remove ROOT profile